argocd/aws/397229547211/clusters/cbioportal-dev/apps/airflow/airflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
  name: cbioportal-ingress-airflow
  namespace: airflow
spec:
  rules:
    - host: airflow-demo.cbioportal.dev.aws.mskcc.org
      http:
        paths:
          - backend:
              service:
                name: airflow-webserver
                port:
                  number: 8080
            path: /
            pathType: Prefix
